--- a/CoreFramework/src/test/resources/env.properties
+++ b/CoreFramework/src/test/resources/env.properties
@@ -1,7 +1,7 @@
 #prop,uat
 env=prod
 reportPath=C:\\JAVA-SELENIUM\\localgitrep\\CoreFramework\\report\\
-gridRun=Y
+gridRun=N
 
 money_xpath_Old=//*[@id='homewrapper']/div[5]/a[3]/div/u
 money_xpath=//html/body/div[1]/div/div[2]/a[2]
