--- a/CoreFramework/build.xml
+++ b/CoreFramework/build.xml
@@ -8,7 +8,7 @@
     <property environment="env"/>
     
     <property name="ws.home" value="${basedir}"/>
-	<!--property name="ws.jars" value="C:\JAVA-SELENIUM\jars\"/-->
+	<property name="ws.jars" value="C:\JAVA-SELENIUM\jars\"/>
     <property name="test.dest" value="${ws.home}/build"/>
     <property name="test.src" value="${ws.home}/src"/>
 	<property name="ng.result" value="test-output"/>
